--- a/_config.yml
+++ b/_config.yml
@@ -15,12 +15,12 @@
 minimal_mistakes_skin    : "default" # "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
 
 # Site Settings
-locale                   : "en-US"
+locale                   : "ko-kr"
 rtl                      : # true, false (default) # turns direction of the page into right to left for RTL languages
-title                    : "Site Title"
-title_separator          : "-"
-subtitle                 : # site tagline that appears below site title in masthead
-name                     : "Your Name"
+title                    : "kkdamoa"
+title_separator          : "/"
+subtitle                 : 
+name                     : "kkdamoa"
 description              : "An amazing website."
 url                      : "https://kkdamoa.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
