--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ locale                   : "ko-kr"
 rtl                      : # true, false (default) # turns direction of the page into right to left for RTL languages
 title                    : "kkdamoa"
 title_separator          : "/"
-subtitle                 : 
+subtitle                 : .
 name                     : "kkdamoa"
 description              : "An amazing website."
 =======
