--- a/_config.yml
+++ b/_config.yml
@@ -8,31 +8,21 @@
 # Theme Settings
 #
 # Review documentation to determine if you should use `theme` or `remote_theme`
-
+# https://mmistakes.github.io/minimal-mistakes/docs/quick-start-guide/#installing-the-theme
 
 # theme                  : "minimal-mistakes-jekyll"
 # remote_theme           : "mmistakes/minimal-mistakes"
 minimal_mistakes_skin    : "default" # "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
 
 # Site Settings
-<<<<<<< HEAD
 locale                   : "en-US"
 rtl                      : # true, false (default) # turns direction of the page into right to left for RTL languages
-title                    : "1"
+title                    : "Site Title"
 title_separator          : "-"
 subtitle                 : # site tagline that appears below site title in masthead
 name                     : "Your Name"
 description              : "An amazing website."
-=======
-locale                   : "ko-KR"
-rtl                      : # true, false (default) # turns direction of the page into right to left for RTL languages
-title                    : "kk다모아"
-title_separator          : "\"
-subtitle                 : # 
-name                     : "kkdamoa"
-description              : "kkdamoa"
->>>>>>> d8cd16cc1d40ce3e92db59ebaaf23a2e8d5ecabb
-url                      : "https://kkdamoa.github.io"
+url                      : # the base hostname & protocol for your site e.g. "https://kkdamoa.github.io/"
 baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
