--- a/_config.yml
+++ b/_config.yml
@@ -84,7 +84,7 @@ google:
 # SEO Related
 google_site_verification :
 bing_site_verification   :
-naver_site_verification  :
+naver_site_verification  : "3ddea906f4511e2e5c2374bc1bbc6f8700c898a9"
 yandex_site_verification :
 baidu_site_verification  :
 
