--- a/workflows/update_posts.yml
+++ b/workflows/update_posts.yml
@@ -3,7 +3,7 @@ name: Update Posts JSON
 on:
   push:
     branches:
-      - main  # main 브랜치에 변경이 생길 때 실행합니다.
+      - main  # main 브랜치에 변경이 생길 때 실행
 
 jobs:
   build:
@@ -20,7 +20,7 @@ jobs:
           done
           sed -i '$ s/,$//' posts.json  # 마지막 쉼표 제거
           echo "]" >> posts.json
-          
+
       - name: Commit posts.json
         run: |
           git config --local user.email "action@github.com"
