--- a/workflows/update_posts.yml
+++ b/workflows/update_posts.yml
@@ -14,6 +14,7 @@ jobs:
 
       - name: Identify problematic files
         id: find_errors
+        continue-on-error: true  # 오류가 발생해도 계속 진행
         run: |
           # 빌드 과정에서 오류가 발생하는 파일을 찾기 위한 빌드 시도
           jekyll build 2>&1 | tee build_log.txt || true
