--- a/workflows/update_posts.yml
+++ b/workflows/update_posts.yml
@@ -34,9 +34,10 @@ jobs:
           echo "]" >> posts.json
 
       - name: Commit posts.json
+        continue-on-error: true  # 오류가 발생해도 계속 진행
         run: |
           git config --local user.email "action@github.com"
           git config --local user.name "GitHub Action"
           git add posts.json
-          git commit -m "Update posts.json"
-          git push
+          git commit -m "Update posts.json" || true
+          git push || true
