--- a/workflows/update_posts.yml
+++ b/workflows/update_posts.yml
@@ -5,6 +5,9 @@ on:
     branches:
       - main  # main 브랜치에 변경이 생길 때 실행
 
+permissions:
+  contents: write  # push 권한 설정
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -39,5 +42,5 @@ jobs:
           git config --local user.email "action@github.com"
           git config --local user.name "GitHub Action"
           git add posts.json
-          git commit -m "Update posts.json" || true
-          git push || true
+          git commit -m "Update posts.json" || true  # 변경 사항이 없으면 오류 무시
+          git push || true  # push 단계에서 오류 무시
