--- a/workflows/update_posts.yml
+++ b/workflows/update_posts.yml
@@ -19,22 +19,15 @@ jobs:
         id: jekyll_build
         continue-on-error: true  # 오류가 발생해도 계속 진행
         run: |
+          # 빌드를 시도하되 오류가 생기더라도 다음 단계로 진행
           jekyll build 2>&1 | tee build_log.txt || true
-          
-      - name: Identify problematic files
-        if: failure()  # 빌드에 실패한 경우에만 실행
-        run: |
-          # 오류가 발생한 파일 이름을 추출하여 problematic_files.txt에 저장
-          grep -oP '_posts/[^ ]+\.md' build_log.txt | sort -u > problematic_files.txt
 
       - name: Generate posts.json
         run: |
+          # posts.json 파일 생성
           echo "[" > posts.json
           for file in $(ls _posts); do
-            # 문제가 발생한 파일인지 확인하고 제외
-            if [ ! -f problematic_files.txt ] || ! grep -q "/_posts/$file" problematic_files.txt; then
-              echo "\"/_posts/$file\"," >> posts.json
-            fi
+            echo "\"/_posts/$file\"," >> posts.json
           done
           sed -i '$ s/,$//' posts.json  # 마지막 쉼표 제거
           echo "]" >> posts.json
@@ -42,6 +35,7 @@ jobs:
       - name: Commit posts.json
         continue-on-error: true  # 오류가 발생해도 계속 진행
         run: |
+          # GitHub Actions에서 posts.json 파일을 커밋하고 푸시
           git config --local user.email "action@github.com"
           git config --local user.name "GitHub Action"
           git add posts.json
